add update and delete functions for stock with routes
